--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: pdl-opt-nonlinear
 Section: perl
 Priority: optional
-Maintainer: Gregory Vanuxem <g.vanuxem@wanadoo.fr>
+Maintainer: Gregory Vanuxem <vanuxemg@yaoo.fr>
 Standards-Version: 3.6.0
-Build-Depends: debhelper (>= 4.0.19), perl (>= 5.8), pdl (>= 2.4.)
+Build-Depends: debhelper (>= 4.0.19), perl (>= 5.8), pdl (>= 2.4.0)
 
 Package: pdl-opt-nonlinear
 Architecture: any
