--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: pdl-opt-nonlinear
 Section: perl
 Priority: optional
-Maintainer: Gregory Vanuxem <vanuxemg@yaoo.fr>
+Maintainer: Gregory Vanuxem <gvanuxem.perl@gmail.com>
 Standards-Version: 3.6.0
 Build-Depends: debhelper (>= 4.0.19), perl (>= 5.8), pdl (>= 2.4.0)
 
